[package]
name = "uniswap-v3-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "uniswap-v3-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
ethers = "2.0"
rust_decimal = { version = "1.0", features = ["serde"] }
